--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>WoW PvP Guide</h1>
     <p>Welcome to your guide on getting started with World of Warcraft PvP arenas!</p>
-    <img src="WWW.jpg" alt="WoW PvP Action" width="500">
+    <img src="WWW.Jpg" alt="WoW PvP Action" width="500">
     <p>Explore tips, strategies, and more to improve your PvP skills.</p>
 </body>
 </html>
